# pygmrt

./: .gitignore  README copy.md  README.ipynb  README.md  build_readme.py  main.py  old.md  pyproject.toml  pytest.ini  readme.ipynb
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: .gitignore  Makefile  README.md  README.rst  api.md  build_logo.py  build_readme.py  conf.py  examples.md  index.md  install.md  installation.md  matplotlibrc  plot_la_reunion.py  plot_piton_fournaise.py  plot_resolution_comparison.py  readme.ipynb  requirements.txt  sg_execution_times.rst  usage.md
logo/: logo.py  main.py  pyproject.toml
notebooks/: 01_playground.ipynb  01_quickstart.ipynb  02_playground.ipynb  README.md  antimeridian.ipynb  playground.ipynb  resolutions.ipynb
notebooks/data/: gmrt_50.000_-25.000_55.000_0.000.tif  synth_-10.0_35.0_-8.0_37.0.tif  synth_-18.0_31.0_-16.0_33.0.tif  synth_55.0_-21.5_56.0_-20.5.tif
notebooks/geotiff/: gmrt_55.000_-21.500_56.000_-20.500.tif
pygmrt/: tiles.py
specs/001-create-a-python/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-python/checklists/: requirements.md
specs/001-create-a-python/contracts/: openapi.yaml
src/pygmrt/: tiles.py
tests/: README.md  __init__.py  conftest.py  test_tiles.py
tests/integration/: test_download_small_bbox.py  test_gmrt_live.py
tests/unit/: test_batch.py  test_first_geotiff_path.py  test_format_resolution.py  test_manifest_naming.py  test_save_directory_path.py  test_validation.py
