[project]
name = "pygmrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
docs = [
    "rasterio>=1.4.3",
    "sphinx>=8.2.3",
]

[tool.setuptools]
packages = ["pygmrt"]

[tool.setuptools.package-dir]
pygmrt = "pygmrt"
