[project]
name = "pygmrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "rasterio>=1.4.3",
    "linkify-it-py>=2.0.3",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.15.0",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.0",
    "sphinx-gallery>=0.18.0",
    "rasterio>=1.4.3",
    "matplotlib>=3.9.0",
    "cartopy>=0.25.0",
    "numpy>=2.2.0",
    "ipykernel>=6.30.1",
]

[tool.setuptools]
packages = ["pygmrt"]

[tool.setuptools.package-dir]
pygmrt = "pygmrt"

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.6",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.2.3",
    "sphinx-gallery>=0.19.0",
]
